# Twitch_Analyser

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ANALYSIS_VALIDATION_AUDIT.md  DATA_PIPELINE_AND_FAIRNESS_REVIEW.md  NON_TECHNICAL_SETUP_AND_RUN_GUIDE.md  PROJECT_GUIDE_EN_ZH.md  RUNBOOK.md
examples/: 2776778244_influencer_script.json  livestreams.json  sample_chat.csv  sample_response_utterance.json  sample_twitchdownloader_chat.json  stream_stats_2776778244.json
products_name/: extract_catalog.py
scripts/: analyze_promotion.py  enrich_transcript_analysis.py  export_influencer_transcript.py  generate_findings_report.py  run_vod_analysis.py  setup_twitch_downloader_macos.sh  transcribe_promotion.py  validate_data_pipeline.py
tests/: test_analysis.py  test_participation.py  test_peaks.py  test_pipeline_alignment.py  test_text_report.py  test_utterances.py  test_window_analysis.py
twitch_promo_analyzer/: __init__.py  analysis.py  cli.py  influencer_transcript.py  line_translate.py  live.py  loaders.py  models.py  participation.py  peaks.py  post_promo.py  products.py  promotions.py  recommendations.py  report.py  report_export.py  script_align.py  sentiment.py  text_report.py  timing.py  transcribe.py  transcript.py  translation.py  utterances.py  video.py  vod.py  window_analysis.py
